Updated Recipes and item models

--- a/src/main/resources/assets/stonewood-industry/lang/en_us.json
+++ b/src/main/resources/assets/stonewood-industry/lang/en_us.json
@@ -14,6 +14,7 @@
   "item.stonewood-industry.cherry_chestplate": "Cherry Chestplate",
   "item.stonewood-industry.cherry_helmet": "Cherry Helmet",
   "item.stonewood-industry.cherry_leggings": "Cherry Leggings",
+  "item.stonewood-industry.cherry_sword": "Cherry Sword",
   "item.stonewood-industry.dark_oak_boots": "Dark Oak Boots",
   "item.stonewood-industry.dark_oak_chestplate": "Dark Oak Chestplate",
   "item.stonewood-industry.dark_oak_helmet": "Dark Oak Helmet",
