--- a/src/main/resources/assets/stonewood-industry/lang/zh_cn.json
+++ b/src/main/resources/assets/stonewood-industry/lang/zh_cn.json
@@ -14,6 +14,7 @@
   "item.stonewood-industry.cherry_chestplate": "樱花木胸甲",
   "item.stonewood-industry.cherry_helmet": "樱花木头盔",
   "item.stonewood-industry.cherry_leggings": "樱花木护腿",
+  "item.stonewood-industry.cherry_sword": "樱花木剑",
   "item.stonewood-industry.dark_oak_boots": "深色橡木鞋子",
   "item.stonewood-industry.dark_oak_chestplate": "深色橡木胸甲",
   "item.stonewood-industry.dark_oak_helmet": "深色橡木头盔",
