--- a/src/main/resources/assets/stonewood-industry/lang/en_us.json
+++ b/src/main/resources/assets/stonewood-industry/lang/en_us.json
@@ -6,19 +6,34 @@
   "item.stonewood-industry.acacia_chestplate": "Acacia Chestplate",
   "item.stonewood-industry.acacia_helmet": "Acacia Helmet",
   "item.stonewood-industry.acacia_leggings": "Acacia Leggings",
+  "item.stonewood-industry.bamboo_boots": "Bamboo Boots",
+  "item.stonewood-industry.bamboo_chestplate": "Bamboo Chestplate",
+  "item.stonewood-industry.bamboo_helmet": "Bamboo Helmet",
+  "item.stonewood-industry.bamboo_leggings": "Bamboo Leggings",
   "item.stonewood-industry.birch_boots": "Birch Boots",
   "item.stonewood-industry.birch_chestplate": "Birch Chestplate",
   "item.stonewood-industry.birch_helmet": "Birch Helmet",
   "item.stonewood-industry.birch_leggings": "Birch Leggings",
+  "item.stonewood-industry.blackstone_boots": "Blackstone Boots",
+  "item.stonewood-industry.blackstone_chestplate": "Blackstone Chestplate",
+  "item.stonewood-industry.blackstone_helmet": "Blackstone Helmet",
+  "item.stonewood-industry.blackstone_leggings": "Blackstone Leggings",
   "item.stonewood-industry.cherry_boots": "Cherry Boots",
   "item.stonewood-industry.cherry_chestplate": "Cherry Chestplate",
   "item.stonewood-industry.cherry_helmet": "Cherry Helmet",
   "item.stonewood-industry.cherry_leggings": "Cherry Leggings",
-  "item.stonewood-industry.cherry_sword": "Cherry Sword",
+  "item.stonewood-industry.crimson_boots": "Crimson Boots",
+  "item.stonewood-industry.crimson_chestplate": "Crimson Chestplate",
+  "item.stonewood-industry.crimson_helmet": "Crimson Helmet",
+  "item.stonewood-industry.crimson_leggings": "Crimson Leggings",
   "item.stonewood-industry.dark_oak_boots": "Dark Oak Boots",
   "item.stonewood-industry.dark_oak_chestplate": "Dark Oak Chestplate",
   "item.stonewood-industry.dark_oak_helmet": "Dark Oak Helmet",
   "item.stonewood-industry.dark_oak_leggings": "Dark Oak Leggings",
+  "item.stonewood-industry.deepslate_boots": "Deepslate Boots",
+  "item.stonewood-industry.deepslate_chestplate": "Deepslate Chestplate",
+  "item.stonewood-industry.deepslate_helmet": "Deepslate Helmet",
+  "item.stonewood-industry.deepslate_leggings": "Deepslate Leggings",
   "item.stonewood-industry.jungle_boots": "Jungle Boots",
   "item.stonewood-industry.jungle_chestplate": "Jungle Chestplate",
   "item.stonewood-industry.jungle_helmet": "Jungle Helmet",
@@ -48,6 +63,10 @@
   "item.stonewood-industry.stone_chestplate": "Stone Chestplate",
   "item.stonewood-industry.stone_helmet": "Stone Helmet",
   "item.stonewood-industry.stone_leggings": "Stone Leggings",
+  "item.stonewood-industry.warped_boots": "Warped Boots",
+  "item.stonewood-industry.warped_chestplate": "Warped Chestplate",
+  "item.stonewood-industry.warped_helmet": "Warped Helmet",
+  "item.stonewood-industry.warped_leggings": "Warped Leggings",
   "stonewood-industry.stone_wood_industry_stone": "Stone Wood Industry: Stone Products",
   "stonewood-industry.stone_wood_industry_wood": "Stone Wood Industry: Wood Products"
 }
