--- a/src/main/resources/assets/stonewood-industry/lang/zh_cn.json
+++ b/src/main/resources/assets/stonewood-industry/lang/zh_cn.json
@@ -6,19 +6,34 @@
   "item.stonewood-industry.acacia_chestplate": "金合欢木胸甲",
   "item.stonewood-industry.acacia_helmet": "金合欢木头盔",
   "item.stonewood-industry.acacia_leggings": "金合欢木护腿",
+  "item.stonewood-industry.bamboo_boots": "竹子鞋子",
+  "item.stonewood-industry.bamboo_chestplate": "竹子胸甲",
+  "item.stonewood-industry.bamboo_helmet": "竹子头盔",
+  "item.stonewood-industry.bamboo_leggings": "竹子护腿",
   "item.stonewood-industry.birch_boots": "白桦木鞋子",
   "item.stonewood-industry.birch_chestplate": "白桦木胸甲",
   "item.stonewood-industry.birch_helmet": "白桦木头盔",
   "item.stonewood-industry.birch_leggings": "白桦木护腿",
+  "item.stonewood-industry.blackstone_boots": "黑石鞋子",
+  "item.stonewood-industry.blackstone_chestplate": "黑石胸甲",
+  "item.stonewood-industry.blackstone_helmet": "黑石头盔",
+  "item.stonewood-industry.blackstone_leggings": "黑石护腿",
   "item.stonewood-industry.cherry_boots": "樱花木鞋子",
   "item.stonewood-industry.cherry_chestplate": "樱花木胸甲",
   "item.stonewood-industry.cherry_helmet": "樱花木头盔",
   "item.stonewood-industry.cherry_leggings": "樱花木护腿",
-  "item.stonewood-industry.cherry_sword": "樱花木剑",
+  "item.stonewood-industry.crimson_boots": "绯红木鞋子",
+  "item.stonewood-industry.crimson_chestplate": "绯红木胸甲",
+  "item.stonewood-industry.crimson_helmet": "绯红木头盔",
+  "item.stonewood-industry.crimson_leggings": "绯红木护腿",
   "item.stonewood-industry.dark_oak_boots": "深色橡木鞋子",
   "item.stonewood-industry.dark_oak_chestplate": "深色橡木胸甲",
   "item.stonewood-industry.dark_oak_helmet": "深色橡木头盔",
   "item.stonewood-industry.dark_oak_leggings": "深色橡木护腿",
+  "item.stonewood-industry.deepslate_boots": "深板岩鞋子",
+  "item.stonewood-industry.deepslate_chestplate": "深板岩胸甲",
+  "item.stonewood-industry.deepslate_helmet": "深板岩头盔",
+  "item.stonewood-industry.deepslate_leggings": "深板岩护腿",
   "item.stonewood-industry.jungle_boots": "丛林木鞋子",
   "item.stonewood-industry.jungle_chestplate": "丛林木胸甲",
   "item.stonewood-industry.jungle_helmet": "丛林木头盔",
@@ -48,6 +63,10 @@
   "item.stonewood-industry.stone_chestplate": "石头胸甲",
   "item.stonewood-industry.stone_helmet": "石头头盔",
   "item.stonewood-industry.stone_leggings": "石头护腿",
+  "item.stonewood-industry.warped_boots": "诡异木鞋子",
+  "item.stonewood-industry.warped_chestplate": "诡异木胸甲",
+  "item.stonewood-industry.warped_helmet": "诡异木头盔",
+  "item.stonewood-industry.warped_leggings": "诡异木护腿",
   "stonewood-industry.stone_wood_industry_stone": "石木工艺：石头制品",
   "stonewood-industry.stone_wood_industry_wood": "石木工艺：木头制品"
 }
