--- a/src/main/resources/assets/stonewood-industry/lang/en_us.json
+++ b/src/main/resources/assets/stonewood-industry/lang/en_us.json
@@ -2,6 +2,8 @@
   "block.stonewood-industry.smooth_stone_button": "Smooth Stone Button",
   "block.stonewood-industry.smooth_stone_pressure_plate": "Smooth Stone Pressure Plate",
   "block.stonewood-industry.smooth_stone_stairs": "Smooth Stone Stairs",
+  "enchantment.stonewood-industry.harden": "Harden",
+  "enchantment.stonewood-industry.speed": "Speed",
   "item.stonewood-industry.acacia_boots": "Acacia Boots",
   "item.stonewood-industry.acacia_chestplate": "Acacia Chestplate",
   "item.stonewood-industry.acacia_helmet": "Acacia Helmet",
@@ -34,10 +36,15 @@
   "item.stonewood-industry.crimson_chestplate": "Crimson Chestplate",
   "item.stonewood-industry.crimson_helmet": "Crimson Helmet",
   "item.stonewood-industry.crimson_leggings": "Crimson Leggings",
+  "item.stonewood-industry.crying_obsidian_axe": "Crying Obsidian Axe",
   "item.stonewood-industry.crying_obsidian_boots": "Crying Obsidian Boots",
   "item.stonewood-industry.crying_obsidian_chestplate": "Crying Obsidian Chestplate",
   "item.stonewood-industry.crying_obsidian_helmet": "Crying Obsidian Helmet",
+  "item.stonewood-industry.crying_obsidian_hoe": "Crying Obsidian Hoe",
   "item.stonewood-industry.crying_obsidian_leggings": "Crying Obsidian Leggings",
+  "item.stonewood-industry.crying_obsidian_pickaxe": "Crying Obsidian Pickaxe",
+  "item.stonewood-industry.crying_obsidian_shovel": "Crying Obsidian Shovel",
+  "item.stonewood-industry.crying_obsidian_sword": "Crying Obsidian Sword",
   "item.stonewood-industry.dark_oak_boots": "Dark Oak Boots",
   "item.stonewood-industry.dark_oak_chestplate": "Dark Oak Chestplate",
   "item.stonewood-industry.dark_oak_helmet": "Dark Oak Helmet",
@@ -74,10 +81,15 @@
   "item.stonewood-industry.oak_chestplate": "Oak Chestplate",
   "item.stonewood-industry.oak_helmet": "Oak Helmet",
   "item.stonewood-industry.oak_leggings": "Oak Leggings",
+  "item.stonewood-industry.obsidian_axe": "Obsidian Axe",
   "item.stonewood-industry.obsidian_boots": "Obsidian Boots",
   "item.stonewood-industry.obsidian_chestplate": "Obsidian Chestplate",
   "item.stonewood-industry.obsidian_helmet": "Obsidian Helmet",
+  "item.stonewood-industry.obsidian_hoe": "Obsidian Hoe",
   "item.stonewood-industry.obsidian_leggings": "Obsidian Leggings",
+  "item.stonewood-industry.obsidian_pickaxe": "Obsidian Pickaxe",
+  "item.stonewood-industry.obsidian_shovel": "Obsidian Shovel",
+  "item.stonewood-industry.obsidian_sword": "Obsidian Sword",
   "item.stonewood-industry.smooth_stone_axe": "Smooth Stone Axe",
   "item.stonewood-industry.smooth_stone_boots": "Smooth Stone Boots",
   "item.stonewood-industry.smooth_stone_chestplate": "Smooth Stone Chestplate",
@@ -99,6 +111,7 @@
   "item.stonewood-industry.warped_chestplate": "Warped Chestplate",
   "item.stonewood-industry.warped_helmet": "Warped Helmet",
   "item.stonewood-industry.warped_leggings": "Warped Leggings",
+  "stonewood-industry.stone_wood_industry_enchant": "Stone Wood Industry: Enchantment",
   "stonewood-industry.stone_wood_industry_stone": "Stone Wood Industry: Stone Products",
   "stonewood-industry.stone_wood_industry_wood": "Stone Wood Industry: Wood Products"
 }
