--- a/src/main/resources/assets/stonewood-industry/lang/zh_cn.json
+++ b/src/main/resources/assets/stonewood-industry/lang/zh_cn.json
@@ -2,6 +2,8 @@
   "block.stonewood-industry.smooth_stone_button": "平滑石按钮",
   "block.stonewood-industry.smooth_stone_pressure_plate": "平滑石压力板",
   "block.stonewood-industry.smooth_stone_stairs": "平滑石楼梯",
+  "enchantment.stonewood-industry.harden": "硬化",
+  "enchantment.stonewood-industry.speed": "快跑",
   "item.stonewood-industry.acacia_boots": "金合欢木鞋子",
   "item.stonewood-industry.acacia_chestplate": "金合欢木胸甲",
   "item.stonewood-industry.acacia_helmet": "金合欢木头盔",
@@ -34,10 +36,15 @@
   "item.stonewood-industry.crimson_chestplate": "绯红木胸甲",
   "item.stonewood-industry.crimson_helmet": "绯红木头盔",
   "item.stonewood-industry.crimson_leggings": "绯红木护腿",
+  "item.stonewood-industry.crying_obsidian_axe": "哭泣的黑曜石斧头",
   "item.stonewood-industry.crying_obsidian_boots": "哭泣的黑曜石鞋子",
   "item.stonewood-industry.crying_obsidian_chestplate": "哭泣的黑曜石胸甲",
   "item.stonewood-industry.crying_obsidian_helmet": "哭泣的黑曜石头盔",
+  "item.stonewood-industry.crying_obsidian_hoe": "哭泣的黑曜石锄头",
   "item.stonewood-industry.crying_obsidian_leggings": "哭泣的黑曜石护腿",
+  "item.stonewood-industry.crying_obsidian_pickaxe": "哭泣的黑曜石镐子",
+  "item.stonewood-industry.crying_obsidian_shovel": "哭泣的黑曜石铲子",
+  "item.stonewood-industry.crying_obsidian_sword": "哭泣的黑曜石剑",
   "item.stonewood-industry.dark_oak_boots": "深色橡木鞋子",
   "item.stonewood-industry.dark_oak_chestplate": "深色橡木胸甲",
   "item.stonewood-industry.dark_oak_helmet": "深色橡木头盔",
@@ -74,10 +81,15 @@
   "item.stonewood-industry.oak_chestplate": "橡木胸甲",
   "item.stonewood-industry.oak_helmet": "橡木头盔",
   "item.stonewood-industry.oak_leggings": "橡木护腿",
+  "item.stonewood-industry.obsidian_axe": "黑曜石斧头",
   "item.stonewood-industry.obsidian_boots": "黑曜石鞋子",
   "item.stonewood-industry.obsidian_chestplate": "黑曜石胸甲",
   "item.stonewood-industry.obsidian_helmet": "黑曜石头盔",
+  "item.stonewood-industry.obsidian_hoe": "黑曜石锄头",
   "item.stonewood-industry.obsidian_leggings": "黑曜石护腿",
+  "item.stonewood-industry.obsidian_pickaxe": "黑曜石镐子",
+  "item.stonewood-industry.obsidian_shovel": "黑曜石铲子",
+  "item.stonewood-industry.obsidian_sword": "黑曜石剑",
   "item.stonewood-industry.smooth_stone_axe": "平滑石斧头",
   "item.stonewood-industry.smooth_stone_boots": "平滑石靴子",
   "item.stonewood-industry.smooth_stone_chestplate": "平滑石胸甲",
@@ -99,6 +111,7 @@
   "item.stonewood-industry.warped_chestplate": "诡异木胸甲",
   "item.stonewood-industry.warped_helmet": "诡异木头盔",
   "item.stonewood-industry.warped_leggings": "诡异木护腿",
+  "stonewood-industry.stone_wood_industry_enchant": "石木工艺：附魔",
   "stonewood-industry.stone_wood_industry_stone": "石木工艺：石头制品",
   "stonewood-industry.stone_wood_industry_wood": "石木工艺：木头制品"
 }
