--- a/src/main/resources/assets/stonewood-industry/lang/en_us.json
+++ b/src/main/resources/assets/stonewood-industry/lang/en_us.json
@@ -6,6 +6,7 @@
   "block.stonewood-industry.smooth_stone_stairs": "Smooth Stone Stairs",
   "enchantment.stonewood-industry.harden": "Harden",
   "enchantment.stonewood-industry.speed": "Speed",
+  "enchantment.stonewood-industry.undying": "Undying",
   "item.stonewood-industry.acacia_boots": "Acacia Boots",
   "item.stonewood-industry.acacia_chestplate": "Acacia Chestplate",
   "item.stonewood-industry.acacia_helmet": "Acacia Helmet",
@@ -32,10 +33,6 @@
   "item.stonewood-industry.basalt_pickaxe": "Basalt Pickaxe",
   "item.stonewood-industry.basalt_shovel": "Basalt Shovel",
   "item.stonewood-industry.basalt_sword": "Basalt Sword",
-  "item.stonewood-industry.bedrock_boots": "Bedrock Boots",
-  "item.stonewood-industry.bedrock_chestplate": "Bedrock Chestplate",
-  "item.stonewood-industry.bedrock_helmet": "Bedrock Helmet",
-  "item.stonewood-industry.bedrock_leggings": "Bedrock Leggings",
   "item.stonewood-industry.birch_boots": "Birch Boots",
   "item.stonewood-industry.birch_chestplate": "Birch Chestplate",
   "item.stonewood-industry.birch_helmet": "Birch Helmet",
