--- a/src/main/resources/assets/stonewood-industry/lang/zh_cn.json
+++ b/src/main/resources/assets/stonewood-industry/lang/zh_cn.json
@@ -6,6 +6,7 @@
   "block.stonewood-industry.smooth_stone_stairs": "平滑石楼梯",
   "enchantment.stonewood-industry.harden": "硬化",
   "enchantment.stonewood-industry.speed": "快跑",
+  "enchantment.stonewood-industry.undying": "不死",
   "item.stonewood-industry.acacia_boots": "金合欢木鞋子",
   "item.stonewood-industry.acacia_chestplate": "金合欢木胸甲",
   "item.stonewood-industry.acacia_helmet": "金合欢木头盔",
@@ -32,10 +33,6 @@
   "item.stonewood-industry.basalt_pickaxe": "玄武岩镐子",
   "item.stonewood-industry.basalt_shovel": "玄武岩铲子",
   "item.stonewood-industry.basalt_sword": "玄武岩剑",
-  "item.stonewood-industry.bedrock_boots": "基岩鞋子",
-  "item.stonewood-industry.bedrock_chestplate": "基岩胸甲",
-  "item.stonewood-industry.bedrock_helmet": "基岩头盔",
-  "item.stonewood-industry.bedrock_leggings": "基岩护腿",
   "item.stonewood-industry.birch_boots": "白桦木鞋子",
   "item.stonewood-industry.birch_chestplate": "白桦木胸甲",
   "item.stonewood-industry.birch_helmet": "白桦木头盔",
