Update v1.6.0 Pre-Release 1
# Changelog
* Updated all types of wooden pickaxes.
* Added an upgrade effect to the Wood Pickaxe, which upgrades when the player completes a specific task, reaching level 10. With each level, players gain some experience. When different pickaxes are fully leveled, different special effects are given.

--- a/src/main/resources/assets/stonewood-industry/lang/en_us.json
+++ b/src/main/resources/assets/stonewood-industry/lang/en_us.json
@@ -11,6 +11,7 @@
   "item.stonewood-industry.acacia_chestplate": "Acacia Chestplate",
   "item.stonewood-industry.acacia_helmet": "Acacia Helmet",
   "item.stonewood-industry.acacia_leggings": "Acacia Leggings",
+  "item.stonewood-industry.acacia_pickaxe": "Acacia Pickaxe",
   "item.stonewood-industry.andesite_axe": "Andesite Axe",
   "item.stonewood-industry.andesite_boots": "Andsite Boots",
   "item.stonewood-industry.andesite_chestplate": "Andsite Chestplate",
@@ -24,6 +25,7 @@
   "item.stonewood-industry.bamboo_chestplate": "Bamboo Chestplate",
   "item.stonewood-industry.bamboo_helmet": "Bamboo Helmet",
   "item.stonewood-industry.bamboo_leggings": "Bamboo Leggings",
+  "item.stonewood-industry.bamboo_pickaxe": "Bamboo Pickaxe",
   "item.stonewood-industry.basalt_axe": "Basalt Axe",
   "item.stonewood-industry.basalt_boots": "Mangrove Boots",
   "item.stonewood-industry.basalt_chestplate": "Mangrove Chestplate",
@@ -37,6 +39,7 @@
   "item.stonewood-industry.birch_chestplate": "Birch Chestplate",
   "item.stonewood-industry.birch_helmet": "Birch Helmet",
   "item.stonewood-industry.birch_leggings": "Birch Leggings",
+  "item.stonewood-industry.birch_pickaxe": "Birch Pickaxe",
   "item.stonewood-industry.blackstone_axe": "Blackstone Axe",
   "item.stonewood-industry.blackstone_boots": "Blackstone Boots",
   "item.stonewood-industry.blackstone_chestplate": "Blackstone Chestplate",
@@ -50,10 +53,12 @@
   "item.stonewood-industry.cherry_chestplate": "Cherry Chestplate",
   "item.stonewood-industry.cherry_helmet": "Cherry Helmet",
   "item.stonewood-industry.cherry_leggings": "Cherry Leggings",
+  "item.stonewood-industry.cherry_pickaxe": "Cherry Pickaxe",
   "item.stonewood-industry.crimson_boots": "Crimson Boots",
   "item.stonewood-industry.crimson_chestplate": "Crimson Chestplate",
   "item.stonewood-industry.crimson_helmet": "Crimson Helmet",
   "item.stonewood-industry.crimson_leggings": "Crimson Leggings",
+  "item.stonewood-industry.crimson_pickaxe": "Crimson Pickaxe",
   "item.stonewood-industry.crying_obsidian_axe": "Crying Obsidian Axe",
   "item.stonewood-industry.crying_obsidian_boots": "Crying Obsidian Boots",
   "item.stonewood-industry.crying_obsidian_chestplate": "Crying Obsidian Chestplate",
@@ -67,6 +72,7 @@
   "item.stonewood-industry.dark_oak_chestplate": "Dark Oak Chestplate",
   "item.stonewood-industry.dark_oak_helmet": "Dark Oak Helmet",
   "item.stonewood-industry.dark_oak_leggings": "Dark Oak Leggings",
+  "item.stonewood-industry.dark_oak_pickaxe": "Dark Oak Pickaxe",
   "item.stonewood-industry.deepslate_axe": "Deepslate Axe",
   "item.stonewood-industry.deepslate_boots": "Deepslate Boots",
   "item.stonewood-industry.deepslate_chestplate": "Deepslate Chestplate",
@@ -107,10 +113,12 @@
   "item.stonewood-industry.jungle_chestplate": "Jungle Chestplate",
   "item.stonewood-industry.jungle_helmet": "Jungle Helmet",
   "item.stonewood-industry.jungle_leggings": "Jungle Leggings",
+  "item.stonewood-industry.jungle_pickaxe": "Jungle Pickaxe",
   "item.stonewood-industry.mangrove_boots": "Mangrove Boots",
   "item.stonewood-industry.mangrove_chestplate": "Mangrove Chestplate",
   "item.stonewood-industry.mangrove_helmet": "Mangrove Helmet",
   "item.stonewood-industry.mangrove_leggings": "Mangrove Leggings",
+  "item.stonewood-industry.mangrove_pickaxe": "Mangrove Pickaxe",
   "item.stonewood-industry.netherrack_axe": "Netherrack Axe",
   "item.stonewood-industry.netherrack_boots": "Dark Oak Boots",
   "item.stonewood-industry.netherrack_chestplate": "Dark Oak Chestplate",
@@ -124,6 +132,7 @@
   "item.stonewood-industry.oak_chestplate": "Oak Chestplate",
   "item.stonewood-industry.oak_helmet": "Oak Helmet",
   "item.stonewood-industry.oak_leggings": "Oak Leggings",
+  "item.stonewood-industry.oak_pickaxe": "Oak Pickaxe",
   "item.stonewood-industry.obsidian_axe": "Obsidian Axe",
   "item.stonewood-industry.obsidian_boots": "Obsidian Boots",
   "item.stonewood-industry.obsidian_chestplate": "Obsidian Chestplate",
@@ -146,6 +155,7 @@
   "item.stonewood-industry.spruce_chestplate": "Spruce Chestplate",
   "item.stonewood-industry.spruce_helmet": "Spruce Helmet",
   "item.stonewood-industry.spruce_leggings": "Spruce Leggings",
+  "item.stonewood-industry.spruce_pickaxe": "Spruce Pickaxe",
   "item.stonewood-industry.stone_boots": "Stone Boots",
   "item.stonewood-industry.stone_chestplate": "Stone Chestplate",
   "item.stonewood-industry.stone_helmet": "Stone Helmet",
@@ -154,6 +164,7 @@
   "item.stonewood-industry.warped_chestplate": "Warped Chestplate",
   "item.stonewood-industry.warped_helmet": "Warped Helmet",
   "item.stonewood-industry.warped_leggings": "Warped Leggings",
+  "item.stonewood-industry.warped_pickaxe": "Warped Pickaxe",
   "stonewood-industry.stone_wood_industry_enchant": "Stone Wood Industry: Enchantment",
   "stonewood-industry.stone_wood_industry_stone": "Stone Wood Industry: Stone Products",
   "stonewood-industry.stone_wood_industry_wood": "Stone Wood Industry: Wood Products"
