--- a/src/main/resources/assets/stonewood-industry/lang/zh_cn.json
+++ b/src/main/resources/assets/stonewood-industry/lang/zh_cn.json
@@ -11,70 +11,76 @@
   "item.stonewood-industry.acacia_chestplate": "金合欢木胸甲",
   "item.stonewood-industry.acacia_helmet": "金合欢木头盔",
   "item.stonewood-industry.acacia_leggings": "金合欢木护腿",
+  "item.stonewood-industry.acacia_pickaxe": "金合欢木镐",
   "item.stonewood-industry.andesite_axe": "安山岩斧头",
   "item.stonewood-industry.andesite_boots": "安山岩鞋子",
   "item.stonewood-industry.andesite_chestplate": "安山岩胸甲",
   "item.stonewood-industry.andesite_helmet": "安山岩头盔",
   "item.stonewood-industry.andesite_hoe": "安山岩锄头",
   "item.stonewood-industry.andesite_leggings": "安山岩护腿",
-  "item.stonewood-industry.andesite_pickaxe": "安山岩镐子",
-  "item.stonewood-industry.andesite_shovel": "安山岩铲子",
+  "item.stonewood-industry.andesite_pickaxe": "安山岩镐",
+  "item.stonewood-industry.andesite_shovel": "安山岩铲",
   "item.stonewood-industry.andesite_sword": "安山岩剑",
   "item.stonewood-industry.bamboo_boots": "竹子鞋子",
   "item.stonewood-industry.bamboo_chestplate": "竹子胸甲",
   "item.stonewood-industry.bamboo_helmet": "竹子头盔",
   "item.stonewood-industry.bamboo_leggings": "竹子护腿",
+  "item.stonewood-industry.bamboo_pickaxe": "竹镐",
   "item.stonewood-industry.basalt_axe": "玄武岩斧头",
   "item.stonewood-industry.basalt_boots": "玄武岩鞋子",
   "item.stonewood-industry.basalt_chestplate": "玄武岩胸甲",
   "item.stonewood-industry.basalt_helmet": "玄武岩头盔",
   "item.stonewood-industry.basalt_hoe": "玄武岩锄头",
   "item.stonewood-industry.basalt_leggings": "玄武岩护腿",
-  "item.stonewood-industry.basalt_pickaxe": "玄武岩镐子",
-  "item.stonewood-industry.basalt_shovel": "玄武岩铲子",
+  "item.stonewood-industry.basalt_pickaxe": "玄武岩镐",
+  "item.stonewood-industry.basalt_shovel": "玄武岩铲",
   "item.stonewood-industry.basalt_sword": "玄武岩剑",
   "item.stonewood-industry.birch_boots": "白桦木鞋子",
   "item.stonewood-industry.birch_chestplate": "白桦木胸甲",
   "item.stonewood-industry.birch_helmet": "白桦木头盔",
   "item.stonewood-industry.birch_leggings": "白桦木护腿",
+  "item.stonewood-industry.birch_pickaxe": "白桦木镐",
   "item.stonewood-industry.blackstone_axe": "黑石斧头",
   "item.stonewood-industry.blackstone_boots": "黑石鞋子",
   "item.stonewood-industry.blackstone_chestplate": "黑石胸甲",
   "item.stonewood-industry.blackstone_helmet": "黑石头盔",
   "item.stonewood-industry.blackstone_hoe": "黑石锄头",
   "item.stonewood-industry.blackstone_leggings": "黑石护腿",
-  "item.stonewood-industry.blackstone_pickaxe": "黑石镐子",
-  "item.stonewood-industry.blackstone_shovel": "黑石铲子",
+  "item.stonewood-industry.blackstone_pickaxe": "黑石镐",
+  "item.stonewood-industry.blackstone_shovel": "黑石铲",
   "item.stonewood-industry.blackstone_sword": "黑石剑",
   "item.stonewood-industry.cherry_boots": "樱花木鞋子",
   "item.stonewood-industry.cherry_chestplate": "樱花木胸甲",
   "item.stonewood-industry.cherry_helmet": "樱花木头盔",
   "item.stonewood-industry.cherry_leggings": "樱花木护腿",
+  "item.stonewood-industry.cherry_pickaxe": "樱花木镐",
   "item.stonewood-industry.crimson_boots": "绯红木鞋子",
   "item.stonewood-industry.crimson_chestplate": "绯红木胸甲",
   "item.stonewood-industry.crimson_helmet": "绯红木头盔",
   "item.stonewood-industry.crimson_leggings": "绯红木护腿",
+  "item.stonewood-industry.crimson_pickaxe": "绯红木镐",
   "item.stonewood-industry.crying_obsidian_axe": "哭泣的黑曜石斧头",
   "item.stonewood-industry.crying_obsidian_boots": "哭泣的黑曜石鞋子",
   "item.stonewood-industry.crying_obsidian_chestplate": "哭泣的黑曜石胸甲",
   "item.stonewood-industry.crying_obsidian_helmet": "哭泣的黑曜石头盔",
   "item.stonewood-industry.crying_obsidian_hoe": "哭泣的黑曜石锄头",
   "item.stonewood-industry.crying_obsidian_leggings": "哭泣的黑曜石护腿",
-  "item.stonewood-industry.crying_obsidian_pickaxe": "哭泣的黑曜石镐子",
-  "item.stonewood-industry.crying_obsidian_shovel": "哭泣的黑曜石铲子",
+  "item.stonewood-industry.crying_obsidian_pickaxe": "哭泣的黑曜石镐",
+  "item.stonewood-industry.crying_obsidian_shovel": "哭泣的黑曜石铲",
   "item.stonewood-industry.crying_obsidian_sword": "哭泣的黑曜石剑",
   "item.stonewood-industry.dark_oak_boots": "深色橡木鞋子",
   "item.stonewood-industry.dark_oak_chestplate": "深色橡木胸甲",
   "item.stonewood-industry.dark_oak_helmet": "深色橡木头盔",
   "item.stonewood-industry.dark_oak_leggings": "深色橡木护腿",
+  "item.stonewood-industry.dark_oak_pickaxe": "深色橡木木镐",
   "item.stonewood-industry.deepslate_axe": "深板岩斧头",
   "item.stonewood-industry.deepslate_boots": "深板岩鞋子",
   "item.stonewood-industry.deepslate_chestplate": "深板岩胸甲",
   "item.stonewood-industry.deepslate_helmet": "深板岩头盔",
   "item.stonewood-industry.deepslate_hoe": "深板岩锄头",
   "item.stonewood-industry.deepslate_leggings": "深板岩护腿",
-  "item.stonewood-industry.deepslate_pickaxe": "深板岩镐子",
-  "item.stonewood-industry.deepslate_shovel": "深板岩铲子",
+  "item.stonewood-industry.deepslate_pickaxe": "深板岩镐",
+  "item.stonewood-industry.deepslate_shovel": "深板岩铲",
   "item.stonewood-industry.deepslate_sword": "深板岩剑",
   "item.stonewood-industry.diorite_axe": "闪长岩斧头",
   "item.stonewood-industry.diorite_boots": "闪长岩鞋子",
@@ -82,8 +88,8 @@
   "item.stonewood-industry.diorite_helmet": "闪长岩头盔",
   "item.stonewood-industry.diorite_hoe": "闪长岩锄头",
   "item.stonewood-industry.diorite_leggings": "闪长岩护腿",
-  "item.stonewood-industry.diorite_pickaxe": "闪长岩镐子",
-  "item.stonewood-industry.diorite_shovel": "闪长岩铲子",
+  "item.stonewood-industry.diorite_pickaxe": "闪长岩镐",
+  "item.stonewood-industry.diorite_shovel": "闪长岩铲",
   "item.stonewood-industry.diorite_sword": "闪长岩剑",
   "item.stonewood-industry.end_stone_axe": "末地石斧头",
   "item.stonewood-industry.end_stone_boots": "末地石鞋子",
@@ -91,8 +97,8 @@
   "item.stonewood-industry.end_stone_helmet": "末地石头盔",
   "item.stonewood-industry.end_stone_hoe": "末地石锄头",
   "item.stonewood-industry.end_stone_leggings": "末地石护腿",
-  "item.stonewood-industry.end_stone_pickaxe": "末地石镐子",
-  "item.stonewood-industry.end_stone_shovel": "末地石铲子",
+  "item.stonewood-industry.end_stone_pickaxe": "末地石镐",
+  "item.stonewood-industry.end_stone_shovel": "末地石铲",
   "item.stonewood-industry.end_stone_sword": "末地石剑",
   "item.stonewood-industry.granite_axe": "花岗岩斧头",
   "item.stonewood-industry.granite_boots": "花岗岩鞋子",
@@ -100,38 +106,41 @@
   "item.stonewood-industry.granite_helmet": "花岗岩头盔",
   "item.stonewood-industry.granite_hoe": "花岗岩锄头",
   "item.stonewood-industry.granite_leggings": "花岗岩护腿",
-  "item.stonewood-industry.granite_pickaxe": "花岗岩镐子",
-  "item.stonewood-industry.granite_shovel": "花岗岩铲子",
+  "item.stonewood-industry.granite_pickaxe": "花岗岩镐",
+  "item.stonewood-industry.granite_shovel": "花岗岩铲",
   "item.stonewood-industry.granite_sword": "花岗岩剑",
   "item.stonewood-industry.jungle_boots": "丛林木鞋子",
   "item.stonewood-industry.jungle_chestplate": "丛林木胸甲",
   "item.stonewood-industry.jungle_helmet": "丛林木头盔",
   "item.stonewood-industry.jungle_leggings": "丛林木护腿",
+  "item.stonewood-industry.jungle_pickaxe": "丛林木镐",
   "item.stonewood-industry.mangrove_boots": "红树鞋子",
   "item.stonewood-industry.mangrove_chestplate": "红树胸甲",
   "item.stonewood-industry.mangrove_helmet": "红树头盔",
   "item.stonewood-industry.mangrove_leggings": "红树护腿",
+  "item.stonewood-industry.mangrove_pickaxe": "红树木镐",
   "item.stonewood-industry.netherrack_axe": "下界岩斧头",
   "item.stonewood-industry.netherrack_boots": "下界岩鞋子",
   "item.stonewood-industry.netherrack_chestplate": "下界岩胸甲",
   "item.stonewood-industry.netherrack_helmet": "下界岩头盔",
   "item.stonewood-industry.netherrack_hoe": "下界岩锄头",
   "item.stonewood-industry.netherrack_leggings": "下界岩护腿",
-  "item.stonewood-industry.netherrack_pickaxe": "下界岩镐子",
-  "item.stonewood-industry.netherrack_shovel": "下界岩铲子",
+  "item.stonewood-industry.netherrack_pickaxe": "下界岩镐",
+  "item.stonewood-industry.netherrack_shovel": "下界岩铲",
   "item.stonewood-industry.netherrack_sword": "下界岩剑",
   "item.stonewood-industry.oak_boots": "橡木鞋子",
   "item.stonewood-industry.oak_chestplate": "橡木胸甲",
   "item.stonewood-industry.oak_helmet": "橡木头盔",
   "item.stonewood-industry.oak_leggings": "橡木护腿",
+  "item.stonewood-industry.oak_pickaxe": "橡木镐",
   "item.stonewood-industry.obsidian_axe": "黑曜石斧头",
   "item.stonewood-industry.obsidian_boots": "黑曜石鞋子",
   "item.stonewood-industry.obsidian_chestplate": "黑曜石胸甲",
   "item.stonewood-industry.obsidian_helmet": "黑曜石头盔",
   "item.stonewood-industry.obsidian_hoe": "黑曜石锄头",
   "item.stonewood-industry.obsidian_leggings": "黑曜石护腿",
-  "item.stonewood-industry.obsidian_pickaxe": "黑曜石镐子",
-  "item.stonewood-industry.obsidian_shovel": "黑曜石铲子",
+  "item.stonewood-industry.obsidian_pickaxe": "黑曜石镐",
+  "item.stonewood-industry.obsidian_shovel": "黑曜石铲",
   "item.stonewood-industry.obsidian_sword": "黑曜石剑",
   "item.stonewood-industry.smooth_stone_axe": "平滑石斧头",
   "item.stonewood-industry.smooth_stone_boots": "平滑石靴子",
@@ -146,6 +155,7 @@
   "item.stonewood-industry.spruce_chestplate": "云杉木胸甲",
   "item.stonewood-industry.spruce_helmet": "云杉木头盔",
   "item.stonewood-industry.spruce_leggings": "云杉木护腿",
+  "item.stonewood-industry.spruce_pickaxe": "云杉木镐",
   "item.stonewood-industry.stone_boots": "石头靴子",
   "item.stonewood-industry.stone_chestplate": "石头胸甲",
   "item.stonewood-industry.stone_helmet": "石头头盔",
@@ -154,6 +164,7 @@
   "item.stonewood-industry.warped_chestplate": "诡异木胸甲",
   "item.stonewood-industry.warped_helmet": "诡异木头盔",
   "item.stonewood-industry.warped_leggings": "诡异木护腿",
+  "item.stonewood-industry.warped_pickaxe": "诡异木镐",
   "stonewood-industry.stone_wood_industry_enchant": "石木工艺：附魔",
   "stonewood-industry.stone_wood_industry_stone": "石木工艺：石头制品",
   "stonewood-industry.stone_wood_industry_wood": "石木工艺：木头制品"
