Update v1.6.0 Pre-Release 2
# Changelog
* Added a special method for maxing out the Wooden Pickaxe to automatically synthesize the Ultimate Wooden Pickaxe when the player has all types of maxed Wooden Pickaxes and a Nether Heart in their backpack. The Ultimate Pickaxe inherits all the effects of the previous maxed Wooden Pickaxe.
* Changed the maxed out effect of the Acacia Pickaxe so that when the Acacia Pickaxe is maxed up, it has an Instant Health instead of the original Health Boost.

--- a/src/main/resources/assets/stonewood-industry/lang/en_us.json
+++ b/src/main/resources/assets/stonewood-industry/lang/en_us.json
@@ -160,6 +160,7 @@
   "item.stonewood-industry.stone_chestplate": "Stone Chestplate",
   "item.stonewood-industry.stone_helmet": "Stone Helmet",
   "item.stonewood-industry.stone_leggings": "Stone Leggings",
+  "item.stonewood-industry.ultimate_wood_pickaxe": "§6Ultimate Wood Pickaxe",
   "item.stonewood-industry.warped_boots": "Warped Boots",
   "item.stonewood-industry.warped_chestplate": "Warped Chestplate",
   "item.stonewood-industry.warped_helmet": "Warped Helmet",
