--- a/src/main/resources/assets/stonewood-industry/lang/zh_cn.json
+++ b/src/main/resources/assets/stonewood-industry/lang/zh_cn.json
@@ -160,6 +160,7 @@
   "item.stonewood-industry.stone_chestplate": "石头胸甲",
   "item.stonewood-industry.stone_helmet": "石头头盔",
   "item.stonewood-industry.stone_leggings": "石头护腿",
+  "item.stonewood-industry.ultimate_wood_pickaxe": "§6终极木镐",
   "item.stonewood-industry.warped_boots": "诡异木鞋子",
   "item.stonewood-industry.warped_chestplate": "诡异木胸甲",
   "item.stonewood-industry.warped_helmet": "诡异木头盔",
